<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:text="@string/qu_n_l_t_i_kho_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="32dp"
        android:text="@string/c_c_vi_c_ng_k"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:text="@string/cv_c_a_t_i"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/ViecLam" />

    <Button
        android:id="@+id/ViecLam"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:text="@string/vi_c_l_m_y_u_th_ch"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/SeachBn" />

    <MultiAutoCompleteTextView
        android:id="@+id/DiaDiem"
        android:layout_width="243dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:text="@string/ch_n_qu_n"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <MultiAutoCompleteTextView
        android:id="@+id/LoaiViec"
        android:layout_width="233dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:text="@string/ch_n_lo_i_vi_c"
        app:layout_constraintBottom_toTopOf="@+id/SeachBn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:layout_marginBottom="22dp"
        android:text="@string/a_i_m"
        app:layout_constraintBottom_toTopOf="@+id/DiaDiem"
        app:layout_constraintStart_toStartOf="@+id/DiaDiem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/lo_i_vi_c"
        app:layout_constraintBottom_toTopOf="@+id/LoaiViec"
        app:layout_constraintStart_toStartOf="@+id/LoaiViec"
        app:layout_constraintTop_toBottomOf="@+id/DiaDiem" />

    <Button
        android:id="@+id/SeachBn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/t_m_ki_m"
        app:layout_constraintBottom_toTopOf="@+id/ViecLam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoaiViec" />

</androidx.constraintlayout.widget.ConstraintLayout>