<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainNv3Activity">

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="17dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/name2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="14dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="142dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="61dp"
        android:text="@string/th_ng_tin_ng_vi_n"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="15dp"
        android:text="@string/t_n"
        app:layout_constraintBottom_toTopOf="@+id/name2"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/ng_y_d_nh_ph_ng_v_n"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/s_i_n_tho_i"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/name2" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="24dp"
        android:text="@string/x_c_nh_n_h_n_ph_ng_v_n"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="45dp"
        android:text="@string/x_c_nh_n_tr_ng_tuy_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
</androidx.constraintlayout.widget.ConstraintLayout>