<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainNv2Activity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="342dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="80dp"
        android:text="@string/ng_vi_c_l_m"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="57dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/t_n_c_ng_ty"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="73dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/a_ch"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/lo_i_c_ng_vi_c"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="146dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/m_t_c_ng_vi_c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>